# py_music

./: .gitignore  .pdm-python  LICENSE  playlist_analyzer.py  pyproject.toml
